# storage/api-docs/api-docs.json
@@ -1300,6 +1300,30 @@
                 ]
             }
         },
+        "/api/export/inventories": {
+            "post": {
+                "tags": [
+                    "Export"
+                ],
+                "summary": "Export inventories data to Excel",
+                "description": "Export inventories data to an Excel file based on the selected year and month.",
+                "operationId": "094eb52a93c973f77515a7df8d6e136c",
+                "responses": {
+                    "200": {
+                        "description": "Excel file downloaded successfully"
+                    },
+                    "400": {
+                        "description": "Bad request. Invalid input data."
+                    },
+                    "403": {
+                        "description": "Forbidden. User is not authorized to perform this action."
+                    },
+                    "500": {
+                        "description": "Internal Server Error. An unexpected error occurred."
+                    }
+                }
+            }
+        },
         "/api/inventories": {
             "get": {
                 "tags": [
